--- a/templates/html/S-index.html
+++ b/templates/html/S-index.html
@@ -24,7 +24,7 @@
 	<!-- 顶部开始 -->
 	<div class="container">
 		<div class="logo">
-			<a href="S-index.html">学生系统</a>
+			<a href="S-index.html">网信安全考试系统</a>
 		</div>
 		<div class="left_open">
 			<a><i title="展开左侧栏" class="iconfont">&#xe699;</i></a>
