--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -60,16 +60,25 @@
 		<div id="side-nav">
 			<ul id="nav">
 				<li>
+					<a onclick="xadmin.add_tab('首页','teacher/score_chart.html')" href="javascript:;">
+						<i class="iconfont left-nav-li" lay-tips="首页">&#xe696;</i>
+						<cite>首页</cite>
+						<i class=""></i>
+					</a>
+				</li>
+				<li>
 					<a onclick="xadmin.add_tab('题库管理','teacher/shi_ti_manager.html')" href="javascript:;">
 						<i class="iconfont left-nav-li" lay-tips="题库管理">&#xe696;</i>
 						<cite>题库管理</cite>
-						<i class=""></i></a>
+						<i class=""></i>
+					</a>
 				</li>
 				<li>
 					<a onclick="xadmin.add_tab('试卷管理','teacher/shi_juan_manager.html')" href="javascript:;">
 						<i class="iconfont left-nav-li" lay-tips="试卷管理">&#xe6a2;</i>
 						<cite>试卷题目管理</cite>
-						<i class=""></i></a>
+						<i class=""></i>
+					</a>
 				</li>
 				<li>
 					<a onclick="xadmin.add_tab('教师评分','teacher/ping-feng.html')" dialog=0 href="javascript:;">
